--- a/vercel.json
+++ b/vercel.json
@@ -12,15 +12,22 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/$1",
-      "status": 200,
+      "src": "^/assets/(.*)$",
+      "dest": "/assets/$1",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
-      "src": "/",
+      "src": "^/favicon.ico$",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "^/robots.txt$",
+      "dest": "/robots.txt"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/index.html",
       "status": 200
     }
